# llm-api-proxy

./: .copilot-instructions.md  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  QWEN.md  README.md  config.example.toml  config.toml  docker-compose.yml
.cursor/rules/: rust-development.md
.github/workflows/: release.yml
examples/: build-release.sh  install-linux.sh  install-macos.sh  install-windows.bat  launchd.plist  systemd.service  windows-service.xml
src/: config.rs  lib.rs  main.rs  proxy.rs
tests/: e2e_tests.rs  integration_tests.rs
